<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/zero_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/three_text"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_one2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/one_text"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/four_text"
        app:layout_constraintBottom_toTopOf="@+id/button_one2"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/five_text"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eigth" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/two_text"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one2"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/dot_text"
        app:layout_constraintBottom_toTopOf="@+id/button_history"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_eigth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/eight_text"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/seven_text"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eigth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/zero_text"
        app:layout_constraintBottom_toTopOf="@+id/button_history"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="getResult"
        android:text="@string/equal_text"
        app:layout_constraintBottom_toTopOf="@+id/button_clear2"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/nine_text"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toStartOf="@+id/button_sum"
        app:layout_constraintStart_toEndOf="@+id/button_eigth"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:onClick="buttonClickValue"
        android:text="@string/sub_text"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_sum" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonClickValue"
        android:text="@string/six_text"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_sub"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:onClick="buttonClickValue"
        android:text="@string/multiply_text"
        app:layout_constraintBottom_toTopOf="@+id/button_clear2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equal"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:onClick="buttonClickValue"
        android:text="@string/sum_text"
        app:layout_constraintBottom_toTopOf="@+id/button_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toBottomOf="@+id/display_text" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:onClick="buttonClickValue"
        android:text="@string/div_text"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_sub" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:text="@string/history_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_clear2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_clear2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        android:onClick="clearResult"
        android:text="@string/clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_history" />

</androidx.constraintlayout.widget.ConstraintLayout>